// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders nothing with no subject person 1`] = `
<View
  alignItems="center"
  flexDirection="row"
  justifyContent="flex-end"
>
  <MyText
    style={
      Object {
        "color": "#B4B6BA",
        "fontSize": 12,
        "lineHeight": 16,
        "paddingRight": 6,
        "textAlign": "right",
        "width": 30,
      }
    }
  />
  <Button
    disabled={false}
    onPress={[Function]}
    style={
      Object {
        "height": 24,
        "width": 24,
      }
    }
    type="transparent"
  >
    <Image
      source={
        Object {
          "testUri": "../../../assets/images/heart-grey.png",
        }
      }
    />
  </Button>
</View>
`;

exports[`renders with custom style 1`] = `
<View
  alignItems="center"
  flexDirection="row"
  justifyContent="flex-end"
>
  <MyText
    style={
      Object {
        "color": "#B4B6BA",
        "fontSize": 12,
        "lineHeight": 16,
        "paddingRight": 6,
        "textAlign": "right",
        "width": 30,
      }
    }
  />
  <Button
    disabled={false}
    onPress={[Function]}
    style={
      Object {
        "height": 24,
        "width": 24,
      }
    }
    type="transparent"
  >
    <Image
      source={
        Object {
          "testUri": "../../../assets/images/heart-grey.png",
        }
      }
    />
  </Button>
</View>
`;

exports[`with subject person renders 0 comments_count 1`] = `
<View
  alignItems="center"
  flexDirection="row"
  justifyContent="flex-end"
>
  <MyText
    style={
      Object {
        "color": "#B4B6BA",
        "fontSize": 12,
        "lineHeight": 16,
        "paddingRight": 6,
        "textAlign": "right",
        "width": 30,
      }
    }
  />
  <Image
    source={
      Object {
        "testUri": "../../../assets/images/comments.png",
      }
    }
  />
  <MyText
    style={
      Object {
        "color": "#B4B6BA",
        "fontSize": 12,
        "lineHeight": 16,
        "paddingRight": 6,
        "textAlign": "right",
        "width": 30,
      }
    }
  />
  <Button
    disabled={false}
    onPress={[Function]}
    style={
      Object {
        "height": 24,
        "width": 24,
      }
    }
    type="transparent"
  >
    <Image
      source={
        Object {
          "testUri": "../../../assets/images/heart-grey.png",
        }
      }
    />
  </Button>
</View>
`;

exports[`with subject person renders 0 likes_count 1`] = `
<View
  alignItems="center"
  flexDirection="row"
  justifyContent="flex-end"
>
  <MyText
    style={
      Object {
        "color": "#B4B6BA",
        "fontSize": 12,
        "lineHeight": 16,
        "paddingRight": 6,
        "textAlign": "right",
        "width": 30,
      }
    }
  >
    15
  </MyText>
  <Image
    source={
      Object {
        "testUri": "../../../assets/images/comments.png",
      }
    }
  />
  <MyText
    style={
      Object {
        "color": "#B4B6BA",
        "fontSize": 12,
        "lineHeight": 16,
        "paddingRight": 6,
        "textAlign": "right",
        "width": 30,
      }
    }
  />
  <Button
    disabled={false}
    onPress={[Function]}
    style={
      Object {
        "height": 24,
        "width": 24,
      }
    }
    type="transparent"
  >
    <Image
      source={
        Object {
          "testUri": "../../../assets/images/heart-grey.png",
        }
      }
    />
  </Button>
</View>
`;

exports[`with subject person renders disabled heart button 1`] = `
<View
  alignItems="center"
  flexDirection="row"
  justifyContent="flex-end"
>
  <MyText
    style={
      Object {
        "color": "#B4B6BA",
        "fontSize": 12,
        "lineHeight": 16,
        "paddingRight": 6,
        "textAlign": "right",
        "width": 30,
      }
    }
  >
    15
  </MyText>
  <Image
    source={
      Object {
        "testUri": "../../../assets/images/comments.png",
      }
    }
  />
  <MyText
    style={
      Object {
        "color": "#B4B6BA",
        "fontSize": 12,
        "lineHeight": 16,
        "paddingRight": 6,
        "textAlign": "right",
        "width": 30,
      }
    }
  />
  <Button
    disabled={true}
    onPress={[Function]}
    style={
      Object {
        "height": 24,
        "width": 24,
      }
    }
    type="transparent"
  >
    <Image
      source={
        Object {
          "testUri": "../../../assets/images/heart-grey.png",
        }
      }
    />
  </Button>
</View>
`;

exports[`with subject person renders for me 1`] = `
<View
  alignItems="center"
  flexDirection="row"
  justifyContent="flex-end"
>
  <MyText
    style={
      Object {
        "color": "#B4B6BA",
        "fontSize": 12,
        "lineHeight": 16,
        "paddingRight": 6,
        "textAlign": "right",
        "width": 30,
      }
    }
  >
    15
  </MyText>
  <Image
    source={
      Object {
        "testUri": "../../../assets/images/comments.png",
      }
    }
  />
  <MyText
    style={
      Object {
        "color": "#B4B6BA",
        "fontSize": 12,
        "lineHeight": 16,
        "paddingRight": 6,
        "textAlign": "right",
        "width": 30,
      }
    }
  />
  <Button
    disabled={false}
    onPress={[Function]}
    style={
      Object {
        "height": 24,
        "width": 24,
      }
    }
    type="transparent"
  >
    <Image
      source={
        Object {
          "testUri": "../../../assets/images/heart-grey.png",
        }
      }
    />
  </Button>
</View>
`;

exports[`with subject person renders for someone else 1`] = `
<View
  alignItems="center"
  flexDirection="row"
  justifyContent="flex-end"
>
  <MyText
    style={
      Object {
        "color": "#B4B6BA",
        "fontSize": 12,
        "lineHeight": 16,
        "paddingRight": 6,
        "textAlign": "right",
        "width": 30,
      }
    }
  >
    15
  </MyText>
  <Image
    source={
      Object {
        "testUri": "../../../assets/images/comments.png",
      }
    }
  />
  <MyText
    style={
      Object {
        "color": "#B4B6BA",
        "fontSize": 12,
        "lineHeight": 16,
        "paddingRight": 6,
        "textAlign": "right",
        "width": 30,
      }
    }
  >
    54
  </MyText>
  <Button
    disabled={false}
    onPress={[Function]}
    style={
      Object {
        "height": 24,
        "width": 24,
      }
    }
    type="transparent"
  >
    <Image
      source={
        Object {
          "testUri": "../../../assets/images/heart-grey.png",
        }
      }
    />
  </Button>
</View>
`;

exports[`with subject person renders when liked 1`] = `
<View
  alignItems="center"
  flexDirection="row"
  justifyContent="flex-end"
>
  <MyText
    style={
      Object {
        "color": "#B4B6BA",
        "fontSize": 12,
        "lineHeight": 16,
        "paddingRight": 6,
        "textAlign": "right",
        "width": 30,
      }
    }
  >
    15
  </MyText>
  <Image
    source={
      Object {
        "testUri": "../../../assets/images/comments.png",
      }
    }
  />
  <MyText
    style={
      Object {
        "color": "#B4B6BA",
        "fontSize": 12,
        "lineHeight": 16,
        "paddingRight": 6,
        "textAlign": "right",
        "width": 30,
      }
    }
  />
  <Button
    disabled={false}
    onPress={[Function]}
    style={
      Object {
        "height": 24,
        "width": 24,
      }
    }
    type="transparent"
  >
    <Image
      source={
        Object {
          "testUri": "../../../assets/images/heart-blue.png",
        }
      }
    />
  </Button>
</View>
`;
